tests/baselines/reference/directReferenceToUndefined.errors.txt
==== tests/cases/compiler/directReferenceToUndefined.ts (1 errors) ====
    var x: Undefined;
           ~~~~~~~~~
!!! directReferenceToUndefined.ts(1,8): error TS2095: Cannot find name 'Undefined'.
    var y = undefined;